<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddVennerSide">

  <EditText
      android:id="@+id/editnavnoppdater"
      android:layout_width="250dp"
      android:layout_height="64dp"
      android:layout_marginTop="208dp"
      android:ems="10"
      android:hint="Skriv Navn"
      android:inputType="text"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0.527"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent" />

  <TextView
      android:id="@+id/textView7"
      android:layout_width="195dp"
      android:layout_height="38dp"
      android:layout_marginTop="80dp"
      android:text="@string/OppdaterVennTitel"
      android:textSize="24sp"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0.148"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent" />

  <TextView
      android:id="@+id/textView6"
      android:layout_width="109dp"
      android:layout_height="24dp"
      android:layout_marginTop="336dp"
      android:text="@string/AddVennerside_tlfTxt"
      app:layout_constraintBottom_toTopOf="@+id/edittlf"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0.288"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent"
      app:layout_constraintVertical_bias="1.0" />

  <TextView
      android:id="@+id/textView5"
      android:layout_width="109dp"
      android:layout_height="24dp"
      android:layout_marginTop="184dp"
      android:text="@string/AddVennerside_navnTxt"
      app:layout_constraintBottom_toTopOf="@+id/editnavn"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0.288"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent"
      app:layout_constraintVertical_bias="1.0" />

  <EditText
      android:id="@+id/edittlfoppdater"
      android:layout_width="254dp"
      android:layout_height="65dp"
      android:layout_marginTop="360dp"
      android:ems="10"
      android:hint="Skriv Telfonnummer"
      android:inputType="phone"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0.541"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent" />

  <ImageView
      android:id="@+id/personimg"
      android:layout_width="53dp"
      android:layout_height="59dp"
      android:layout_marginStart="28dp"
      android:layout_marginTop="212dp"
      app:layout_constraintEnd_toStartOf="@+id/editnavn"
      app:layout_constraintHorizontal_bias="0.0"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent"
      app:srcCompat="@drawable/person" />

  <ImageView
      android:id="@+id/telefonimg"
      android:layout_width="55dp"
      android:layout_height="59dp"
      android:layout_marginStart="24dp"
      android:layout_marginTop="364dp"
      app:layout_constraintEnd_toStartOf="@+id/edittlf"
      app:layout_constraintHorizontal_bias="0.8"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent"
      app:srcCompat="@drawable/telefon" />

  <ImageButton
      android:id="@+id/oppdaterpersonknapp"
      android:layout_width="139dp"
      android:layout_height="81dp"
      android:layout_alignParentTop="true"
      android:layout_alignParentRight="true"
      android:layout_marginTop="32dp"
      android:src="@drawable/personpin"
      android:text="Navn"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0.297"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/edittlfoppdater" />

  <TextView
      android:id="@+id/errornavnoppdater"
      android:layout_width="139dp"
      android:layout_height="27dp"
      android:layout_marginTop="184dp"
      android:textColor="@color/red"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0.742"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent" />

  <TextView
      android:id="@+id/errortlfoppdater"
      android:layout_width="145dp"
      android:layout_height="26dp"
      android:layout_marginTop="336dp"
      android:textColor="@color/red"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0.736"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>